--- a/HotelManager/docker-compose.yml
+++ b/HotelManager/docker-compose.yml
@@ -1,7 +1,7 @@
 services:
   app:
     build: .
-    command: sh -c "python manage.py migrate && gunicorn HotelManager.wsgi -b 0.0.0.0:8000"
+    command: sh -c "python manage.py migrate && gunicorn HotelManager.wsgi -b 0.0.0.0:8000 --preload"
     container_name: app
     volumes:
       - .:/app
